# momoa

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTE.md  README.md  justfile  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
.semaphore/: create-release.yml  semaphore.yml
docs/: index.md  reference.md  requirements.txt
docs/css/: custom.css
momoa/: __init__.py  exceptions.py  format.py  model.py
momoa/engines/: __init__.py  pydantic.py  statham.py
release-notes/: +model-factory.removed.md  +momoa-model.removed.md  +pluggable-engines.added.md  +py313-py314.added.md  +serializable.added.md  +statham-model.changed.md  +tooling-uv.changed.md  +undefined-move.changed.md  0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.2.1.md  0.2.2.md  0.3.0.md  README.md
scripts/: extract_changelog.py  suggest_version.py
tests/: conftest.py  test_deserialization.py  test_format.py  test_model.py  test_schema.py  test_schema_engines.py  test_serialization.py
tests/engines/: conftest.py  contract.py  test_pydantic.py  test_registry.py  test_statham.py
