[project]
name = "momoa"
version = "0.3.0"
description = "A library for definition, validation and serialisation of Python objects based on JSONSchema specifications."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Berislav Lopac", email = "berislav@lopac.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: File Formats :: JSON :: JSON Schema"
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "statham-schema>=0.13.5",
    "python-dateutil>=2.8.2",
    "pyhumps>=3.8.0",
    "json-ref-dict>=0.7.2",
]

[dependency-groups]
checks = [
    "ruff>=0.0.238",
    "mypy>=1.9.0",
    "isort>=5.13.2",
    "deptry>=0.21.1",
]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-spec>=3.2.0",
    "tox>=3.28.0",
    "tox-pdm>=0.6.1",
]
docs = [
    "mkdocs-material>=9.5.45",
    "mkapi>=3.0.22",
    "jinja2>=3.1.4",
]

[project.urls]
homepage = "https://momoa.readthedocs.io"
repository = "https://github.com/berislavlopac/momoa"

[tool.pdm.build]
includes = ["momoa/"]

[tool.isort]
profile = "black"
line_length = 96
filter_files = true
force_alphabetical_sort_within_sections = true

[tool.coverage.run]
source = [ "momoa/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract",]

[tool.mypy]
mypy_path = "momoa/"
files = ["momoa/"]
ignore_missing_imports = true

[tool.ruff]
line-length = 96
output-format = "grouped"

[tool.ruff.lint]
select = [  # see https://docs.astral.sh/ruff/rules/
    "E4", "E7", "E9",  # basic pycodestyle rules
    "W",     # pycodestyle warnings
    "F",     # Pyflakes rules
    "D",     # pydocstyle checks
    "N",     # PEP8 naming conventions
    "PLR",   # Pylint refactoring recommendations
    "PTH",   # recommends to use pathlib instead of os.path
    "UP",    # pyupgrade suggestions
    "BLE",   # locates blind exception capture
    "B",     # locates possible bugs and design problems
    "A",     # locates shadowing of builtin names
    "C4",    # locates possible issues with comprehensions
    "DTZ",   # locates incorrect use of timezone information
    "PIE",   # miscellaneous linting rules
    "TRY",   # locates potential exception handling antipatterns
    "PERF",  # locates potential performance issues
    "RUF",   # various Ruff-specific linting rules
]
ignore = ["D105", "D107", "D203", "D212", "D401", "D407", "D413"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "N", "PLR", "DTZ001"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
